--- a/style.css
+++ b/style.css
@@ -9,3 +9,19 @@
     font-size: 3em;
     text-align: center;
 }
+#btn{
+    padding: 20px 50px;
+    text-align: center;
+    font-size: 2em;
+    margin-right: 20px;
+}
+#btn2{
+    padding: 20px 50px;
+    text-align: center;
+    font-size: 2em;
+}
+.cont_btn{
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
